Add header and add style

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,39 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header class="header">
+    <img class="header__background" src="./images/background.png" alt="background">
+    <div class="container">
+      <div class="row">
+        <div class="header__wrapper col-md-4">
+          <div class="logo">
+            <h4 class="logo__title"><span>El Tigre</span></h4>
+            <h5 class="logo__subtitle">Venezuela Coffee Beans</h5>
+          </div>
+        </div>
+        <nav class="nav__wrapper col-md-8">
+          <a href="#home">Home</a>
+          <a href="#products">Products</a>
+          <a href="#contact">Contact</a>
+        </nav>
+      </div>
+      <div class="row row__title">
+        <div class="title__wrapper col-md-12">
+          <h1>Home of</h1>
+          <h1>Original Tastes</h1>
+        </div>
+      </div>  
+      <div class="row">
+        <div class="button__wrapper col-md-12">
+          <button type="submit" class="btn btn-one">
+            <h4>Discover</h4>
+            <img src="./images/arrow.down.svg" alt="circle-down">
+          </button>
+        </div> 
+      </div>
+    </div>  
+  </header>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="./vendor/bootstrap.bundle.min.js"></script>
 </body>
