Add about section and footer, add style

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,26 @@
       </div>
     </div>
   </section>
+  <section class="about">
+    <img class="about__background" src="./images/about-us.jpg" alt="background">
+    <div class="container">
+      <h2 class="about__title">About Us</h2>
+      <div class="row">
+        <div class="text__wrapper">
+          <p>Who are we? Just a bunch of friends with<br>
+            a love for a good coffee and desire to create<br>
+            something new, something original.<br><br>
+            Our coffees reflect us - young, wild and free.<br>
+            We are on the journey of new tastes...
+          </p>
+          <p>Join Us!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <p>© 2023 EL TIGRE inc.</p>
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="./vendor/bootstrap.bundle.min.js"></script>
 </body>
