--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,34 @@
 <body>
   <header class="header">
     <img class="header__background" src="./images/background.png" alt="background">
-    <div class="container">
-      <div class="row">
-        <div class="header__wrapper col-md-4">
-          <div class="logo">
-            <h4 class="logo__title"><span>El Tigre</span></h4>
-            <h5 class="logo__subtitle">Venezuela Coffee Beans</h5>
-          </div>
+    <div class="header__wrapper container">
+      <nav class="nav__wrapper navbar fixed-top navbar-expand-lg navbar-dark bg-black">
+        <a class="logo navbar-brand" href="#home">
+          <h4 class="logo__title"><span>El Tigre</span></h4>
+          <h5 class="logo__subtitle">Venezuela Coffee Beans</h5>
+        </a>
+        <button class="navbar-toggler" type="button" 
+                data-bs-toggle="collapse" data-bs-target="#mobile-menu"
+                aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mobile-menu">
+          <ul class="navbar-nav">
+            <li><a class="nav-link" href="#home">Home</a></li>
+            <li><a class="nav-link" href="#products">Products</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
+          </ul>
         </div>
-        <nav class="nav__wrapper col-md-8">
-          <a href="#home">Home</a>
-          <a href="#products">Products</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
+      </nav>
       <div class="row row__title">
-        <div class="title__wrapper col-md-12">
+        <div class="title__wrapper">
           <h1>Home of</h1>
           <h1>Original Tastes</h1>
         </div>
       </div>
       <div class="row">
-        <div class="button__wrapper col-md-12">
-          <button type="submit" class="btn btn-one">
+        <div class="button__wrapper">
+          <button type="submit" id="discover" class="btn btn-one">
             <span>Discover</span>
             <img src="./images/arrow.down.svg" alt="circle-down">
           </button>
@@ -41,77 +46,61 @@
       </div>
     </div>
   </header>
+
   <div id="pages">
-    <section id="home">
-      <div id="home__page__wrapper container"></div>
+    <section id="home" class="active">
+      <section id="home__gallery">
+        <div class="container">
+          <h2 class="section__title">Products</h2>
+        </div>
+      </section>
+      <section id="home__about">
+        <img class="home__about--background" src="./images/about-us.jpg" alt="background">
+        <div class="container">
+          <h2 class="section__title">About Us</h2>
+          <div class="row">
+            <div class="text__wrapper">
+              <p>Who are we? Just a bunch of friends with<br>
+                a love for a good coffee and desire to create<br>
+                something new, something original.<br><br>
+                Our coffees reflect us - young, wild and free.<br>
+                We are on the journey of new tastes...
+              </p>
+              <p>Join Us!</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
+
     <section id="products">
-      <div id="products__page__wrapper" class="product-list container"></div>
+      <section id="products__gallery">
+        <div class="container">
+          <h2 class="section__title">Products</h2>
+        </div>
+      </section>
     </section>
+
     <section id="contact">
-      <div id="contact__page__wrapper container"></div>
     </section>
+
   </div>
-  <section class="gallery">
-    <h2 class="gallery__title">Products</h2>
-    <div class="container">
-      <div class="row">
-        <div class="product__wrapper">
-          <div class="product__header col-md-6">
-            <h3 class="product__name">01. La Lagartija</h3>
-            <p class="product__description most-popular"> Mysterious and treacherous... The best choice for the start of your journey! It will provide you a rich delicious flavor.</p>
-            <h5 class="product__roasting">Roasting: <span>5/10</span></h5>
-            <h5 class="product__intensity">Intensity: <span>6/10</span></h5>
-          </div>
-          <div class="product__image col-md-6">
-            <img src="./images/coffee-1.png" alt="image">
-          </div>
-        </div>
-        <div class="product__wrapper reverse">
-          <div class="product__header col-md-6">
-            <h3 class="product__name">02. El Tigre</h3>
-            <p class="product__description"> Really dark coffee, only for the real gourmets. It has bitter flavor of grapefruits and is mixed with a little bit of peanuts with carmel.</p>
-            <h5 class="product__roasting">Roasting: <span>8/10</span></h5>
-            <h5 class="product__intensity">Intensity: <span>9/10</span></h5>
-          </div>
-          <div class="product__image col-md-6">
-            <img src="./images/coffee-2.png" alt="image">
-          </div>
-        </div>
-        <div class="product__wrapper">
-          <div class="product__header col-md-6">
-            <h3 class="product__name">03. La Cucaracha</h3>
-            <p class="product__description"> Sweet and intense with a big amount of different flavors. Carmel, grapes, strawberry, you name it! It's a great choice for warm summer days.</p>
-            <h5 class="product__roasting">Roasting: <span>3/10</span></h5>
-            <h5 class="product__intensity">Intensity: <span>7/10</span></h5>
-          </div>
-          <div class="product__image col-md-6">
-            <img src="./images/coffee-3.png" alt="image">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="about">
-    <img class="about__background" src="./images/about-us.jpg" alt="background">
-    <div class="container">
-      <h2 class="about__title">About Us</h2>
-      <div class="row">
-        <div class="text__wrapper">
-          <p>Who are we? Just a bunch of friends with<br>
-            a love for a good coffee and desire to create<br>
-            something new, something original.<br><br>
-            Our coffees reflect us - young, wild and free.<br>
-            We are on the journey of new tastes...
-          </p>
-          <p>Join Us!</p>
-        </div>
-      </div>
-    </div>
-  </section>
   <footer class="footer">
     <p>© 2023 EL TIGRE inc.</p>
   </footer>
+  <script id="template-product" type="text/x-handlebars-template">
+    <div class="product__wrapper">
+      <div class="product__header col-md-6">
+        <h3 class="product__name">{{ name }}</h3>
+        <p class="product__description">{{ description }}</p>
+        <h5 class="product__roasting">Roasting: <span>{{ params.roasting }}/10</span></h5>
+        <h5 class="product__intensity">Intensity: <span>{{ params.intensity }}/10</span></h5>
+      </div>
+      <div class="product__image col-md-6">
+        <img src="{{ image }}" alt="{{ name }}">
+      </div>
+    </div>
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="./vendor/bootstrap.bundle.min.js"></script>
 </body>
